{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 33,
  "lineage": "17a5115a-774e-a67a-9104-3e7aa16ac014",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "redshift_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:124282008832:internet-gateway/igw-0a44f37fea458d76e",
            "id": "igw-0a44f37fea458d76e",
            "owner_id": "124282008832",
            "tags": {
              "Name": "Redshift Internet Gateway"
            },
            "tags_all": {
              "Name": "Redshift Internet Gateway"
            },
            "vpc_id": "vpc-09eadc444006bd0ec"
          },
          "dependencies": [
            "aws_vpc.redshift_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:124282008832:route-table/rtb-0a69ef48c4889c4c9",
            "id": "rtb-0a69ef48c4889c4c9",
            "owner_id": "124282008832",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a44f37fea458d76e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Redshift Route Table"
            },
            "tags_all": {
              "Name": "Redshift Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09eadc444006bd0ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.redshift_igw",
            "aws_vpc.redshift_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047081612f8ba844e",
            "route_table_id": "rtb-0a69ef48c4889c4c9",
            "subnet_id": "subnet-042aba92a33dbee95"
          },
          "dependencies": [
            "aws_internet_gateway.redshift_igw",
            "aws_route_table.redshift_route_table",
            "aws_subnet.redshift_subnet",
            "aws_vpc.redshift_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redshift_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:124282008832:security-group/sg-09bc6fb2cfc666af5",
            "description": "Allow Redshift traffic",
            "egress": [],
            "id": "sg-09bc6fb2cfc666af5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5439,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5439
              }
            ],
            "name": "redshift_sg",
            "name_prefix": "",
            "owner_id": "124282008832",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Redshift Security Group"
            },
            "tags_all": {
              "Name": "Redshift Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09eadc444006bd0ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.redshift_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:124282008832:subnet/subnet-042aba92a33dbee95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042aba92a33dbee95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124282008832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Redshift Subnet"
            },
            "tags_all": {
              "Name": "Redshift Subnet"
            },
            "vpc_id": "vpc-09eadc444006bd0ec"
          },
          "dependencies": [
            "aws_vpc.redshift_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "redshift_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:124282008832:vpc/vpc-09eadc444006bd0ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a61f9cff60151fa6",
            "default_route_table_id": "rtb-032d6b12126bbb98e",
            "default_security_group_id": "sg-0a59f86727150dffc",
            "dhcp_options_id": "dopt-09f8141f0a7ba70ff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09eadc444006bd0ec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032d6b12126bbb98e",
            "owner_id": "124282008832",
            "tags": {
              "Name": "Redshift VPC"
            },
            "tags_all": {
              "Name": "Redshift VPC"
            }
          }
        }
      ]
    }
  ]
}